<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tomer.edu.watchtv.MainActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/linearLayout4">

        <Button
            android:textSize="20dp"
            android:textColor="#000000"
            android:background="#FF0000"
            android:onClick="showORT"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ort"
            android:id="@+id/btnORT"
            android:layout_weight="1" />

        <Button
            android:textSize="20dp"
            android:textColor="#000000"
            android:background="#00FF00"
            android:onClick="showRTR"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/rtr"
            android:id="@+id/btnRTR"
            android:layout_weight="1" />

        <Button
            android:textSize="20dp"
            android:textColor="#000000"
            android:background="#0000FF"
            android:onClick="showCh10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ch10"
            android:id="@+id/btnCh10"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/linearLayout4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout5">

        <Button
            android:textSize="20dp"
            android:textColor="#000000"
            android:background="#92ffcc"
            android:onClick="show112"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_112_ua"
            android:id="@+id/btn112"
            android:layout_weight="1" />

        <Button
            android:textSize="20dp"
            android:textColor="#000000"
            android:background="#50c7ff"
            android:onClick="showOneplusOne"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/onepone_ua"
            android:id="@+id/btnOnePlusOne"
            android:layout_weight="1" />

        <Button
            android:textSize="20dp"
            android:textColor="#000000"
            android:background="#ff2f7a"
            android:onClick="showAnimal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/animal"
            android:id="@+id/btnAnimal"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/linearLayout5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">

        <Button
            android:textSize="20dp"
            android:textColor="#000000"
            android:background="#ffd88a"
            android:onClick="showNEOGEO"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/neogeo"
            android:id="@+id/btnNEOGEO"
            android:layout_weight="1" />

        <Button
            android:textSize="20dp"
            android:textColor="#000000"
            android:background="#359fff"
            android:onClick="showNTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ntv"
            android:id="@+id/btnNTV"
            android:layout_weight="1" />

        <Button
            android:textSize="20dp"
            android:textColor="#000000"
            android:background="#ffa439"
            android:onClick="showYOUTUBE"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/youtube"
            android:id="@+id/btnYOUTUBE"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:onClick="showGlazTv"
            android:textSize="20dp"
            android:textColor="#000000"
            android:background="#ff5091"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="GlazTv"
            android:id="@+id/btnGlazTv"
            android:layout_weight="1" />

        <Button
            android:onClick="showZopTv"
            android:textSize="20dp"
            android:textColor="#000000"
            android:background="#d6baff"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="ZopTv"
            android:id="@+id/ZopTv"
            android:layout_weight="1" />

        <Button
            android:onClick="showKuvaldaTv"
            android:textSize="20dp"
            android:textColor="#000000"
            android:background="#e6ff89"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Kuvalda"
            android:id="@+id/btnKuvaldaTv"
            android:layout_weight="1" />
    </LinearLayout>
</RelativeLayout>
